force-app/main/default/objects/Question_Choice__c/Question_Choice__c.object-meta.xml
<CustomObject>
    <label>Question Choice</label>
    <nameField>
        <label>Question Choice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>