force-app/main/default/objects/Question_Choice__c/fields/BRD_Rule__c.field-meta.xml
<CustomField>
    <fullName>BRD_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRD Rule</label>
    <referenceTo>BRD_Rule__c</referenceTo>
    <relationshipLabel>Question Choices</relationshipLabel>
    <relationshipName>Question_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>