force-app/main/default/objects/Question_Choice__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>category</label>
    <referenceTo>BRD_Rule__c</referenceTo>
    <relationshipLabel>Question Choices (category)</relationshipLabel>
    <relationshipName>Question_Choices1</relationshipName>
    <type>Lookup</type>
</CustomField>