force-app/main/default/objects/Question_Choice__c/fields/Global_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Global_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Parameter</label>
    <referenceTo>Global_Parameter__c</referenceTo>
    <relationshipLabel>Question Choices</relationshipLabel>
    <relationshipName>Question_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>