force-app/main/default/objects/Question_Choice__c/fields/Question_Choice_Master__c.field-meta.xml
<CustomField>
    <fullName>Question_Choice_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Choice Master</label>
    <referenceTo>Question_Choice_Master__c</referenceTo>
    <relationshipLabel>Question Choices</relationshipLabel>
    <relationshipName>Question_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>