force-app/main/default/objects/Question_Choice__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Category</label>
    <referenceTo>BRD_Rule__c</referenceTo>
    <relationshipLabel>Question Choices (Sub Category)</relationshipLabel>
    <relationshipName>Question_Choices2</relationshipName>
    <type>Lookup</type>
</CustomField>